# Lumina

./: .dockerignore  .env.example  .gitignore  DEPLOY_AWS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.streamlit/: config.toml
app/: __init__.py  config.py  llm.py  logging_config.py  main.py
app/agent/: __init__.py  graph.py  tools.py
app/rag/: __init__.py  embeddings.py  ingest.py  pipeline.py  retriever.py  vectorstore.py
app/workflows/: __init__.py  digest.py  n8n_webhooks.py
n8n/: README.md
n8n/workflows/: daily_digest_email.json  drive_auto_ingest.json
tests/: test_agent.py  test_config.py  test_documents.py  test_rag.py  test_workflows.py
ui/: streamlit_app.py
